refractored, reviewed